# yini-insurance-advisor

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  PRD.md  README.md  constitution.md  pyproject.toml  requirements.txt
agents/: __init__.py  citation_verifier_tool.py  clause_extraction_tool.py  document_retrieval_tool.py  langgraph_workflow.py  policy_comparison_tool.py  response_draft_tool.py
app/: ui.py
contracts/: __init__.py  documents.py  embeddings.py  evaluation.py  guardrails.py  ingestion.py  mcp.py  optimization.py  responses.py  state.py  tools.py  workflow.py
core/: __init__.py  confidence_guardrails.py  config.py  dspy_query_classification.py  evaluation_dataset.py  evaluation_runner.py  hosted_query_classification_latency.py  logging.py  mcp_client.py  mcp_compatibility.py  mcp_server.py  mcp_versioning.py  optimization_dataset.py  prompt_guardrails.py  query_classification_cost.py  query_classification_improvement.py  query_classification_latency.py  query_classification_latency_budget.py  query_classification_quality.py  query_scope.py
deploy/: Dockerfile  start.sh
docs/: architecture.md  category-onboarding-playbook.md  documentacion-proyecto-yini-es.md  evaluation-report.md  mvp-go-live.md  spaces-manual-qa-checklist.md
mcp/: __init__.py
ops/: __init__.py  document-metadata-overlays.json  observability.py  term-equivalences.json
rag/: __init__.py  arl_remuneration.py  cli_runtime.py  document_canonicalization.py  evidence_selection.py  grounded_answers.py  ingestion.py  ingestion_artifacts.py  pdf_conversion.py  (+7 more)
(+762 files in other folders)
