[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yini-insurance-advisor"
version = "0.1.0"
description = "Foundation scaffold for the Yini insurance advisor assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2,<3",
    "groq>=0.11,<1",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "qdrant-client>=1.9,<2",
    "sentence-transformers>=3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*",
    "agents*",
    "contracts*",
    "core*",
    "mcp*",
    "ops*",
    "rag*",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
